--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,8 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+description: 白裤裆寒冬一击
+header-img: "img/tag-bg.png"
 ---
 
 <!-- Page Header -->
