--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is 渃水朦胧."
 header-img: "img/about-headpage.jpg"
 ---
 
